--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-qrious",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "a vue component of generating qrcode with `qrious`",
   "main": "dist/vue-qrious",
   "repository": "git@github.com:JounQin/vue-qrious.git",
@@ -20,7 +20,7 @@
     "rollup": "^0.41.4",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-uglify": "^1.0.1",
-    "rollup-plugin-vue2": "^0.8.0",
+    "rollup-plugin-vue": "^2.2.18",
     "rollup-watch": "^3.2.2"
   }
 }
