--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
     "qrious": "^2.2.0"
   },
   "devDependencies": {
-    "babel-runtime": "^6.22.0",
-    "cross-env": "^3.1.4",
-    "rollup": "^0.41.4",
+    "cross-env": "^3.2.4",
+    "rollup": "^0.41.6",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-uglify": "^1.0.1",
-    "rollup-plugin-vue": "^2.3.0-beta.1",
+    "rollup-plugin-vue": "^2.3.1",
     "rollup-watch": "^3.2.2"
   }
 }
