--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-qrious",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "a vue component of generating qrcode with `qrious`",
   "main": "dist/vue-qrious",
   "repository": "git@github.com:JounQin/vue-qrious.git",
@@ -12,11 +12,12 @@
     "build:prod": "cross-env NODE_ENV=production yarn build",
     "dist": "yarn build && yarn build:prod"
   },
-  "dependencies": {
-    "qrious": "^2.2.0"
+  "peerDependencies": {
+    "qrious": "^2.0.0",
+    "vue": "^2.0.0"
   },
   "devDependencies": {
-    "cross-env": "^3.2.4",
+    "cross-env": "^4.0.0",
     "rollup": "^0.41.6",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-uglify": "^1.0.1",
