--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-qrious",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "a vue component of generating qrcode with `qrious`",
   "main": "dist/vue-qrious",
   "repository": "git@github.com:JounQin/vue-qrious.git",
@@ -13,15 +13,21 @@
     "dist": "yarn build && yarn build:prod"
   },
   "peerDependencies": {
-    "qrious": "^2.0.0",
     "vue": "^2.0.0"
   },
+  "dependencies": {
+    "qrious": "^2.2.0"
+  },
   "devDependencies": {
+    "babel-helper-vue-jsx-merge-props": "^2.0.2",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.4.2",
+    "babel-preset-env": "^1.3.3",
+    "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^4.0.0",
     "rollup": "^0.41.6",
-    "rollup-plugin-buble": "^0.15.0",
+    "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-uglify": "^1.0.1",
-    "rollup-plugin-vue": "^2.3.1",
     "rollup-watch": "^3.2.2"
   }
 }
