--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-qrious",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "a vue component of generating qrcode with `qrious`",
   "browser": "dist/vue-qrious.browser",
   "main": "dist/vue-qrious",
@@ -15,8 +15,13 @@
     "server": "cross-env ENV=server rollup -c",
     "build": "yarn client && yarn server",
     "build:prod": "cross-env NODE_ENV=production yarn build",
-    "dist": "yarn build && yarn build:prod"
+    "dist": "yarn build && yarn build:prod",
+    "lint": "eslint . --max-warnings=10",
+    "lint:fix": "yarn lint --fix"
   },
+  "files": [
+    "dist/*.js"
+  ],
   "peerDependencies": {
     "vue": "^2.0.0"
   },
@@ -25,14 +30,17 @@
     "qrious": "^4.0.2"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.4.3",
     "babel-preset-env": "^1.5.2",
     "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^5.0.1",
-    "rollup": "^0.43.0",
-    "rollup-plugin-babel": "^2.7.1",
+    "eslint": "^4.6.1",
+    "eslint-config-1stg": "^0.0.5",
+    "rollup": "^0.49.3",
+    "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-uglify": "^2.0.1",
     "rollup-watch": "^4.0.0"
   }
