--- a/package.json
+++ b/package.json
@@ -1,47 +1,107 @@
 {
-  "name": "vue-qrious",
-  "version": "1.1.1",
-  "description": "a vue component of generating qrcode with `qrious`",
-  "browser": "dist/vue-qrious.browser",
-  "main": "dist/vue-qrious",
-  "module": "lib/index",
-  "unpkg": "dist/vue-qrious.browser",
-  "repository": "git@github.com:JounQin/vue-qrious.git",
+  "name": "@rxts/vue",
+  "version": "0.0.0",
+  "description": "Make Vue greater with RxTS.",
+  "repository": "git@github.com:rx-ts/vue.git",
   "author": "JounQin <admin@1stg.me>",
   "license": "MIT",
-  "scripts": {
-    "dev": "yarn client -- --watch",
-    "client": "rollup -c",
-    "server": "cross-env ENV=server rollup -c",
-    "build": "yarn client && yarn server",
-    "build:prod": "cross-env NODE_ENV=production yarn build",
-    "dist": "yarn build && yarn build:prod",
-    "lint": "eslint . --max-warnings=10",
-    "lint:fix": "yarn lint --fix"
-  },
-  "files": [
-    "dist/*.js"
+  "private": true,
+  "workspaces": [
+    "packages/*"
   ],
-  "peerDependencies": {
-    "vue": "^2.0.0"
+  "scripts": {
+    "dev": "parcel demo/index.html",
+    "lint:es": "EFF_NO_LINK_RULES=true eslint . --ext js,md,mdx,ts,tsx -f friendly",
+    "lint:style": "stylelint **/*.scss",
+    "lint": "run-p lint:*",
+    "build:es": "tsc -b --force",
+    "build:bundle": "rollup -c node_modules/@1stg/rollup-config/module.js",
+    "build:bundle:min": "cross-env NODE_ENV=production yarn build:bundle",
+    "build:demo": "parcel build demo/index.html --out-dir dist",
+    "build": "rimraf dist packages/*/lib && run-p build:**",
+    "serve": "serve dist",
+    "type-coverage": "type-coverage --cache --ignore-catch --detail --ignore-files *.d.ts --strict"
   },
-  "dependencies": {
-    "node-qrious": "^4.0.0",
-    "qrious": "^4.0.2"
+  "peerDependencies": {
+    "vue": "^2.6.10"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-helper-vue-jsx-merge-props": "^2.0.2",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-vue-jsx": "^3.4.3",
-    "babel-preset-env": "^1.5.2",
-    "babel-preset-stage-0": "^6.24.1",
-    "cross-env": "^5.0.1",
-    "eslint": "^4.6.1",
-    "eslint-config-1stg": "^0.0.5",
-    "rollup": "^0.49.3",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-uglify": "^2.0.1",
-    "rollup-watch": "^4.0.0"
+    "@1stg/babel-preset": "^0.5.0",
+    "@1stg/eslint-config": "^0.6.0",
+    "@1stg/husky-config": "^0.3.0",
+    "@1stg/lint-staged": "^0.5.0",
+    "@1stg/prettier-config": "^0.2.0",
+    "@1stg/rollup-config": "^0.3.0",
+    "@1stg/stylelint-config": "^0.4.0",
+    "@1stg/tsconfig": "^0.3.0",
+    "@1stg/tslint-config": "^0.2.0",
+    "@babel/core": "^7.5.5",
+    "@commitlint/cli": "^8.1.0",
+    "@commitlint/config-conventional": "^8.1.0",
+    "@types/classnames": "^2.2.9",
+    "@types/lodash": "^4.14.138",
+    "@types/node": "^12.7.3",
+    "autoprefixer": "^9.6.1",
+    "classnames": "^2.2.6",
+    "core-js": "^3.2.1",
+    "cross-env": "^5.2.1",
+    "cssnano": "^4.1.10",
+    "eslint": "^6.3.0",
+    "eslint-formatter-friendly": "^7.0.0",
+    "husky": "^3.0.5",
+    "lerna": "^3.16.4",
+    "lerna-changelog": "^0.8.2",
+    "lint-staged": "^9.2.5",
+    "lodash": "^4.17.15",
+    "npm-run-all": "^4.1.5",
+    "parcel": "^1.12.3",
+    "postcss": "^7.0.17",
+    "prettier": "^1.18.2",
+    "qrious": "^4.0.2",
+    "remark-preset-lint-consistent": "^2.0.3",
+    "remark-preset-lint-markdown-style-guide": "^2.1.3",
+    "remark-preset-lint-recommended": "^3.0.3",
+    "remark-preset-prettier": "^0.1.1",
+    "rimraf": "^3.0.0",
+    "rollup": "^1.20.3",
+    "rollup-plugin-terser": "^5.1.1",
+    "rollup-plugin-typescript": "^1.0.1",
+    "rxjs": "^6.5.2",
+    "sass": "^1.22.10",
+    "serve": "^11.1.0",
+    "stylelint": "^10.1.0",
+    "ts-node": "^8.3.0",
+    "tslint": "^5.19.0",
+    "type-coverage": "^2.2.0",
+    "typescript": "^3.6.2",
+    "vue": "^2.6.10",
+    "vue-qrious": "link:packages/vue-qrious/src"
+  },
+  "babel": {
+    "presets": [
+      "@1stg"
+    ]
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "eslintIgnore": [
+    ".cache",
+    ".parcel-cache",
+    "CHANGELOG.md",
+    "dist",
+    "lib"
+  ],
+  "prettier": "@1stg/prettier-config",
+  "renovate": {
+    "extends": "@1stg"
+  },
+  "stylelint": {
+    "extends": "@1stg/stylelint-config/scss"
+  },
+  "typeCoverage": {
+    "atLeast": 100
   }
 }
