fix(qrcode): example code, add keywords field in packages.json

--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "vue-qrious": "link:packages/vue-qrious/src"
   },
   "alias": {
-    "vue": "./node_modules/vue/dist/vue.esm.js"
+    "vue": "./node_modules/vue/dist/vue.esm"
   },
   "babel": {
     "presets": [
