--- a/package.json
+++ b/package.json
@@ -23,16 +23,18 @@
     "type-coverage": "type-coverage --cache --ignore-catch --detail --ignore-files *.d.ts --strict"
   },
   "devDependencies": {
-    "@1stg/babel-preset": "^0.5.0",
-    "@1stg/eslint-config": "^0.6.0",
+    "@1stg/babel-preset": "^0.6.0",
+    "@1stg/browserslist-config": "^0.2.0",
+    "@1stg/eslint-config": "^0.8.1",
     "@1stg/husky-config": "^0.3.0",
-    "@1stg/lint-staged": "^0.5.0",
+    "@1stg/lint-staged": "^0.6.0",
+    "@1stg/postcss-config": "^0.2.0",
     "@1stg/prettier-config": "^0.2.0",
-    "@1stg/rollup-config": "^0.3.0",
-    "@1stg/stylelint-config": "^0.4.0",
-    "@1stg/tsconfig": "^0.3.0",
-    "@1stg/tslint-config": "^0.2.0",
-    "@babel/core": "^7.5.5",
+    "@1stg/rollup-config": "^0.4.1",
+    "@1stg/stylelint-config": "^0.6.0",
+    "@1stg/tsconfig": "^0.4.0",
+    "@1stg/tslint-config": "^0.3.0",
+    "@babel/core": "^7.6.0",
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
     "@types/classnames": "^2.2.9",
@@ -40,6 +42,7 @@
     "@types/node": "^12.7.4",
     "@types/qrcode": "^1.3.4",
     "autoprefixer": "^9.6.1",
+    "browserslist": "^4.7.0",
     "classnames": "^2.2.6",
     "core-js": "^3.2.1",
     "cross-env": "^5.2.1",
@@ -53,7 +56,7 @@
     "lodash": "^4.17.15",
     "npm-run-all": "^4.1.5",
     "parcel": "^1.12.3",
-    "postcss": "^7.0.17",
+    "postcss": "^7.0.18",
     "prettier": "^1.18.2",
     "qrcode": "^1.4.1",
     "qrious": "^4.0.2",
@@ -84,6 +87,9 @@
       "@1stg"
     ]
   },
+  "browserslist": [
+    "extends @1stg/browserslist-config/modern"
+  ],
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
