fix(deps): bump dependencies, pass $attrs as domProps

--- a/packages/vue-qrious/package.json
+++ b/packages/vue-qrious/package.json
@@ -5,14 +5,13 @@
   "repository": "git@github.com:rx-ts/vue.git",
   "author": "JounQin <admin@1stg.me>",
   "license": "MIT",
-  "main": "lib/cjs.js",
-  "module": "lib/index.js",
-  "browser": "lib/umd.js",
-  "unpkg": "lib/umd.min.js",
-  "es2015": "lib/es2015.js",
-  "esm5": "lib/index.js",
-  "fesm5": "lib/esm.js",
-  "types": "lib/index.d.ts",
+  "main": "lib/cjs",
+  "module": "lib",
+  "jsdelivr": "lib/umd",
+  "unpkg": "lib/umd",
+  "es2015": "lib/es2015",
+  "fesm5": "lib/esm",
+  "types": "lib",
   "files": [
     "lib",
     "src",
