--- a/package.json
+++ b/package.json
@@ -20,19 +20,20 @@
     "build:docs": "parcel build packages/*/docs/index.html",
     "build": "rimraf dist packages/*/lib && run-p build:**",
     "serve": "serve dist",
-    "type-coverage": "type-coverage --cache --ignore-catch --detail --ignore-files *.d.ts --strict"
+    "type-coverage": "type-coverage --cache --detail --ignore-catch --ignore-files *.d.ts --strict"
   },
   "devDependencies": {
     "@1stg/babel-preset": "^0.6.0",
     "@1stg/browserslist-config": "^0.2.1",
-    "@1stg/eslint-config": "^0.8.1",
+    "@1stg/eslint-config": "^0.9.2",
     "@1stg/husky-config": "^0.3.0",
     "@1stg/lint-staged": "^0.6.0",
     "@1stg/postcss-config": "^0.2.0",
     "@1stg/prettier-config": "^0.2.0",
-    "@1stg/rollup-config": "^0.4.1",
+    "@1stg/remark-config": "^0.2.1",
+    "@1stg/rollup-config": "^0.8.0",
     "@1stg/stylelint-config": "^0.6.0",
-    "@1stg/tsconfig": "^0.4.0",
+    "@1stg/tsconfig": "^0.5.0",
     "@1stg/tslint-config": "^0.3.0",
     "@babel/core": "^7.6.0",
     "@commitlint/cli": "^8.1.0",
@@ -60,19 +61,15 @@
     "prettier": "^1.18.2",
     "qrcode": "^1.4.1",
     "qrious": "^4.0.2",
-    "remark-preset-lint-consistent": "^2.0.3",
-    "remark-preset-lint-markdown-style-guide": "^2.1.3",
-    "remark-preset-lint-recommended": "^3.0.3",
-    "remark-preset-prettier": "^0.1.1",
     "rimraf": "^3.0.0",
-    "rollup": "^1.20.3",
+    "rollup": "^1.21.2",
     "rxjs": "^6.5.3",
     "sanitize.css": "^11.0.0",
     "sass": "^1.23.0-module.beta.1",
     "serve": "^11.1.0",
     "stylelint": "^10.1.0",
     "ts-node": "^8.3.0",
-    "tslint": "^5.19.0",
+    "tslint": "^5.20.0",
     "type-coverage": "^2.2.0",
     "typescript": "^3.6.2",
     "vue": "^2.6.10",
@@ -88,7 +85,7 @@
     ]
   },
   "browserslist": [
-    "extends @1stg/browserslist-config/modern"
+    "extends @1stg/browserslist-config"
   ],
   "commitlint": {
     "extends": [
