--- a/package.json
+++ b/package.json
@@ -11,67 +11,66 @@
   ],
   "scripts": {
     "dev": "parcel packages/*/docs/index.html",
-    "lint:es": "EFF_NO_LINK_RULES=true eslint . --ext js,md,mdx,ts,tsx -f friendly",
+    "lint:es": "eslint . --ext js,md,mdx,ts,tsx -f friendly",
     "lint:style": "stylelint **/*.scss",
     "lint": "run-p lint:*",
-    "build:es": "tsc -b --force",
-    "build:bundle": "rollup -c node_modules/@1stg/rollup-config/module.js",
-    "build:bundle:min": "cross-env NODE_ENV=production yarn build:bundle",
+    "build:es": "tsc -b",
+    "build:bundle": "r --prod",
     "build:docs": "parcel build packages/*/docs/index.html",
-    "build": "rimraf dist packages/*/lib && run-p build:**",
+    "build": "rimraf dist && run-p build:**",
     "serve": "serve dist",
     "type-coverage": "type-coverage --cache --detail --ignore-catch --ignore-files *.d.ts --strict"
   },
   "devDependencies": {
-    "@1stg/babel-preset": "^0.6.0",
+    "@1stg/babel-preset": "^0.7.0",
     "@1stg/browserslist-config": "^0.2.1",
-    "@1stg/eslint-config": "^0.9.2",
+    "@1stg/commitlint-config": "^0.1.0",
+    "@1stg/eslint-config": "^0.12.10",
     "@1stg/husky-config": "^0.3.0",
-    "@1stg/lint-staged": "^0.6.0",
-    "@1stg/postcss-config": "^0.2.0",
+    "@1stg/lint-staged": "^0.7.4",
+    "@1stg/postcss-config": "^0.3.0",
     "@1stg/prettier-config": "^0.2.0",
     "@1stg/remark-config": "^0.2.1",
-    "@1stg/rollup-config": "^0.8.0",
-    "@1stg/stylelint-config": "^0.6.0",
-    "@1stg/tsconfig": "^0.5.0",
-    "@1stg/tslint-config": "^0.3.0",
+    "@1stg/rollup-config": "^0.9.5",
+    "@1stg/stylelint-config": "^0.6.3",
+    "@1stg/tsconfig": "^0.5.1",
+    "@1stg/tslint-config": "^0.3.3",
     "@babel/core": "^7.6.0",
-    "@commitlint/cli": "^8.1.0",
-    "@commitlint/config-conventional": "^8.1.0",
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
     "@types/classnames": "^2.2.9",
     "@types/lodash": "^4.14.138",
-    "@types/node": "^12.7.4",
+    "@types/node": "^12.7.5",
     "@types/qrcode": "^1.3.4",
     "autoprefixer": "^9.6.1",
     "browserslist": "^4.7.0",
     "classnames": "^2.2.6",
     "core-js": "^3.2.1",
-    "cross-env": "^5.2.1",
-    "cssnano": "^4.1.10",
-    "eslint": "^6.3.0",
-    "eslint-formatter-friendly": "^7.0.0",
+    "cross-env": "^6.0.0",
+    "eslint": "^6.4.0",
     "husky": "^3.0.5",
     "lerna": "^3.16.4",
     "lerna-changelog": "^0.8.2",
-    "lint-staged": "^9.2.5",
+    "lint-staged": "^9.3.0",
     "lodash": "^4.17.15",
     "npm-run-all": "^4.1.5",
     "parcel": "^1.12.3",
     "postcss": "^7.0.18",
     "prettier": "^1.18.2",
-    "qrcode": "^1.4.1",
+    "qrcode": "^1.4.2",
     "qrious": "^4.0.2",
+    "react": "^16.9.0",
     "rimraf": "^3.0.0",
-    "rollup": "^1.21.2",
+    "rollup": "^1.21.4",
     "rxjs": "^6.5.3",
     "sanitize.css": "^11.0.0",
     "sass": "^1.23.0-module.beta.1",
     "serve": "^11.1.0",
-    "stylelint": "^10.1.0",
-    "ts-node": "^8.3.0",
+    "stylelint": "^11.0.0",
+    "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
-    "type-coverage": "^2.2.0",
-    "typescript": "^3.6.2",
+    "type-coverage": "^2.3.0",
+    "typescript": "^3.6.3",
     "vue": "^2.6.10",
     "vue-qrcode": "link:packages/vue-qrcode/src",
     "vue-qrious": "link:packages/vue-qrious/src"
@@ -89,7 +88,7 @@
   ],
   "commitlint": {
     "extends": [
-      "@commitlint/config-conventional"
+      "@1stg"
     ]
   },
   "eslintIgnore": [
@@ -97,7 +96,8 @@
     ".parcel-cache",
     "dist",
     "lib",
-    "packages/*/CHANGELOG.md"
+    "packages/*/CHANGELOG.md",
+    "!.*.js"
   ],
   "prettier": "@1stg/prettier-config/vue",
   "renovate": {
