--- a/packages/vue-qrcode/package.json
+++ b/packages/vue-qrcode/package.json
@@ -3,16 +3,17 @@
   "version": "0.2.1",
   "description": "🤳 A Vue component for QR code generation with `qrcode`",
   "repository": "git@github.com:rx-ts/vue.git",
+  "homepage": "https://github.com/rx-ts/vue/blob/master/packages/vue-qrcode",
   "author": "JounQin <admin@1stg.me>",
   "license": "MIT",
-  "main": "lib/cjs.js",
-  "module": "lib/index.js",
-  "browser": "lib/umd.js",
-  "unpkg": "lib/umd.min.js",
-  "es2015": "lib/es2015.js",
-  "esm5": "lib/index.js",
-  "fesm5": "lib/esm.js",
-  "types": "lib/index.d.ts",
+  "main": "lib/cjs",
+  "module": "lib",
+  "jsdelivr": "lib/umd",
+  "unpkg": "lib/umd",
+  "es2015": "lib/es2015",
+  "esm5": "lib",
+  "fesm5": "lib/esm",
+  "types": "lib",
   "files": [
     "lib",
     "src"
