--- a/package.json
+++ b/package.json
@@ -19,25 +19,20 @@
     "lint:es": "cross-env PARSER_NO_WATCH=true eslint . --cache --ext js,md,mdx,ts,tsx -f friendly",
     "lint:style": "stylelint '**/*.scss'",
     "lint:tsc": "tsc --noEmit",
-    "postinstall": "yarn-deduplicate",
-    "serve": "serve dist",
-    "type-coverage": "type-coverage --cache --detail --ignore-catch --ignore-files '*.d.ts' --strict"
+    "postinstall": "yarn-deduplicate || exit 0",
+    "start": "serve dist",
+    "type-coverage": "type-coverage --cache --detail --ignore-catch --ignore-files '**/*.d.ts' --strict"
   },
   "devDependencies": {
     "@1stg/app-config": "^0.1.21",
     "@1stg/lib-config": "^0.1.19",
-    "@babel/core": "^7.8.3",
     "@types/classnames": "^2.2.9",
     "@types/lodash": "^4.14.149",
-    "@types/node": "^13.1.8",
+    "@types/node": "^13.5.0",
     "@types/qrcode": "^1.3.4",
-    "autoprefixer": "^9.7.4",
     "classnames": "^2.2.6",
-    "core-js": "^3.6.4",
-    "cross-env": "^6.0.3",
     "lerna": "^3.20.2",
     "lerna-changelog": "^1.0.0",
-    "lint-staged": "^9.5.0",
     "lodash": "^4.17.15",
     "npm-run-all": "^4.1.5",
     "parcel": "^1.12.4",
@@ -47,7 +42,7 @@
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
     "sanitize.css": "^11.0.0",
-    "sass": "^1.24.5",
+    "sass": "^1.25.1-test.1",
     "serve": "^11.3.0",
     "ts-node": "^8.6.2",
     "type-coverage": "^2.4.0",
@@ -64,14 +59,6 @@
     "presets": [
       "@1stg"
     ]
-  },
-  "commitlint": {
-    "extends": [
-      "@1stg"
-    ]
-  },
-  "renovate": {
-    "extends": "@1stg"
   },
   "typeCoverage": {
     "atLeast": 100
