--- a/package.json
+++ b/package.json
@@ -10,49 +10,59 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "rimraf dist && run-p build:**",
+    "build": "run-s build:r build:ts build:docs",
     "build:docs": "parcel build packages/*/docs/index.html",
-    "build:r": "r --prod",
+    "build:r": "r -e named -p",
     "build:ts": "tsc -b",
+    "clean": "rimraf dist packages/*/{lib,*.tsbuildinfo}",
     "dev": "parcel packages/*/docs/index.html",
     "lint": "run-p lint:*",
-    "lint:es": "cross-env PARSER_NO_WATCH=true eslint . --cache --ext js,md,mdx,ts,tsx -f friendly",
+    "lint:es": "cross-env PARSER_NO_WATCH=true eslint . --cache --ext js,md,mdx,ts,tsx,vue -f friendly",
     "lint:style": "stylelint '**/*.scss'",
-    "lint:tsc": "tsc --noEmit",
+    "lint:tsc": "tsc",
     "postinstall": "yarn-deduplicate || exit 0",
     "start": "serve dist",
-    "type-coverage": "type-coverage --cache --detail --ignore-catch --ignore-files '**/*.d.ts' --strict"
+    "test": "cross-env NODE_ENV=development jest",
+    "type-coverage": "type-coverage --cache --detail --ignore-catch --ignore-files '**/*.d.ts'"
   },
   "devDependencies": {
-    "@1stg/app-config": "^0.1.21",
-    "@1stg/lib-config": "^0.1.19",
+    "@1stg/app-config": "^0.1.23",
+    "@1stg/lib-config": "^0.1.21",
+    "@d-ts/vue": "^0.4.2",
     "@types/classnames": "^2.2.9",
+    "@types/jest": "^25.1.0",
     "@types/lodash": "^4.14.149",
-    "@types/node": "^13.5.0",
+    "@types/node": "^13.5.1",
     "@types/qrcode": "^1.3.4",
+    "@vue/test-utils": "^1.0.0-beta.31",
     "classnames": "^2.2.6",
     "lerna": "^3.20.2",
     "lerna-changelog": "^1.0.0",
     "lodash": "^4.17.15",
+    "lodash-es": "^4.17.15",
     "npm-run-all": "^4.1.5",
     "parcel": "^1.12.4",
     "qrcode": "^1.4.4",
     "qrious": "^4.0.2",
     "react": "^16.12.0",
-    "rimraf": "^3.0.0",
+    "rimraf": "^3.0.1",
     "rxjs": "^6.5.4",
     "sanitize.css": "^11.0.0",
     "sass": "^1.25.1-test.1",
     "serve": "^11.3.0",
+    "ts-jest": "^25.0.0",
     "ts-node": "^8.6.2",
     "type-coverage": "^2.4.0",
     "typescript": "^3.7.5",
     "vue": "^2.6.11",
-    "vue-qrcode": "link:packages/vue-qrcode/src",
-    "vue-qrious": "link:packages/vue-qrious/src",
     "yarn-deduplicate": "^1.1.1"
   },
+  "resolutions": {
+    "@babel/core": "^7.8.3",
+    "imagemin-gifsicle": "^6.0.1"
+  },
   "alias": {
+    "lodash": "lodash-es",
     "vue": "./node_modules/vue/dist/vue.esm"
   },
   "babel": {
@@ -60,7 +70,11 @@
       "@1stg"
     ]
   },
+  "jest": {
+    "collectCoverage": true,
+    "preset": "ts-jest"
+  },
   "typeCoverage": {
-    "atLeast": 100
+    "atLeast": 98.6
   }
 }
