--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,3 +1,12 @@
 {
-  "extends": "@1stg/tsconfig/tsconfig"
+  "extends": "@1stg/tsconfig/tsconfig",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "vue-qrcode": ["packages/vue-qrcode/src"],
+      "vue-qrious": ["packages/vue-qrious/src"],
+      "vue-translator": ["packages/vue-translator/src"]
+    },
+    "typeRoots": ["./node_modules/@types", "./node_modules/@d-ts"]
+  }
 }
