--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.5.1",
     "@types/qrcode": "^1.3.4",
+    "@vue/component-compiler-utils": "^3.1.1",
     "@vue/test-utils": "^1.0.0-beta.31",
     "classnames": "^2.2.6",
     "lerna": "^3.20.2",
@@ -55,6 +56,8 @@
     "type-coverage": "^2.4.0",
     "typescript": "^3.7.5",
     "vue": "^2.6.11",
+    "vue-hot-reload-api": "^2.3.4",
+    "vue-template-compiler": "^2.6.11",
     "yarn-deduplicate": "^1.1.1"
   },
   "resolutions": {
