--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   ],
   "scripts": {
     "build": "run-s build:r build:ts build:docs",
-    "build:docs": "parcel build packages/*/docs/index.html",
+    "build:docs": "vuepress build",
     "build:r": "r -e named -p",
     "build:ts": "tsc -b",
     "clean": "rimraf dist packages/*/{lib,*.tsbuildinfo}",
-    "dev": "parcel packages/*/docs/index.html",
+    "dev": "vuepress dev",
     "lint": "run-p lint:*",
     "lint:es": "cross-env PARSER_NO_WATCH=true eslint . --cache --ext js,md,mdx,ts,tsx,vue -f friendly",
-    "lint:style": "stylelint '**/*.scss'",
+    "lint:style": "stylelint '.vuepress/**/*.{scss,vue}'",
     "lint:tsc": "tsc",
     "postinstall": "yarn-deduplicate || exit 0",
     "start": "serve dist",
@@ -29,48 +29,48 @@
     "@1stg/app-config": "^0.1.23",
     "@1stg/lib-config": "^0.1.21",
     "@d-ts/vue": "^0.4.2",
-    "@types/classnames": "^2.2.9",
-    "@types/jest": "^25.1.0",
+    "@types/jest": "^25.1.1",
     "@types/lodash": "^4.14.149",
-    "@types/node": "^13.5.1",
+    "@types/node": "^13.5.2",
     "@types/qrcode": "^1.3.4",
-    "@vue/component-compiler-utils": "^3.1.1",
+    "@types/webpack": "^4.41.3",
     "@vue/test-utils": "^1.0.0-beta.31",
-    "classnames": "^2.2.6",
     "lerna": "^3.20.2",
-    "lerna-changelog": "^1.0.0",
-    "lodash": "^4.17.15",
     "lodash-es": "^4.17.15",
     "npm-run-all": "^4.1.5",
-    "parcel": "^1.12.4",
     "qrcode": "^1.4.4",
     "qrious": "^4.0.2",
     "react": "^16.12.0",
     "rimraf": "^3.0.1",
     "rxjs": "^6.5.4",
-    "sanitize.css": "^11.0.0",
-    "sass": "^1.25.1-test.1",
+    "sass": "^1.25.0",
+    "sass-loader": "^8.0.2",
     "serve": "^11.3.0",
     "ts-jest": "^25.0.0",
     "ts-node": "^8.6.2",
     "type-coverage": "^2.4.0",
     "typescript": "^3.7.5",
     "vue": "^2.6.11",
-    "vue-hot-reload-api": "^2.3.4",
     "vue-template-compiler": "^2.6.11",
+    "vuepress": "^1.2.0",
+    "vuepress-plugin-typescript": "^0.1.1",
+    "vuepress-types": "^0.8.0",
     "yarn-deduplicate": "^1.1.1"
   },
   "resolutions": {
     "@babel/core": "^7.8.3",
-    "imagemin-gifsicle": "^6.0.1"
-  },
-  "alias": {
-    "lodash": "lodash-es",
-    "vue": "./node_modules/vue/dist/vue.esm"
+    "imagemin-gifsicle": "^6.0.1",
+    "webpack-chain": "^6.3.1"
   },
   "babel": {
     "presets": [
-      "@1stg"
+      [
+        "@1stg",
+        {
+          "typescript": true,
+          "vue": true
+        }
+      ]
     ]
   },
   "jest": {
