chore: lint .vuepress files correctly

--- a/lerna.json
+++ b/lerna.json
@@ -22,7 +22,8 @@
     },
     "publish": {
       "ignoreChanges": [
-        "**/docs/**",
+        "**/.*/**",
+        "**/test/**",
         "**/test/**",
         "**/tsconfig.json",
         "**/*.md",
