--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dev": "vuepress dev",
     "lint": "run-p lint:*",
     "lint:es": "cross-env PARSER_NO_WATCH=true eslint . --cache --ext js,md,mdx,ts,tsx,vue -f friendly",
-    "lint:style": "stylelint '.vuepress/**/*.{scss,vue}'",
+    "lint:style": "stylelint --cache '.vuepress/**/*.{scss,vue}'",
     "lint:tsc": "tsc",
     "postinstall": "yarn-deduplicate || exit 0",
     "start": "serve dist",
@@ -36,6 +36,7 @@
     "@types/webpack": "^4.41.3",
     "@vue/test-utils": "^1.0.0-beta.31",
     "lerna": "^3.20.2",
+    "lodash": "^4.17.15",
     "lodash-es": "^4.17.15",
     "npm-run-all": "^4.1.5",
     "qrcode": "^1.4.4",
