fix: bump all deps, reference types correctly - fix #102

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,3 @@
 {
-  "extends": "@1stg",
-  "overrides": [
-    {
-      "files": "**/docs/**",
-      "rules": {
-        "node/no-extraneous-import": 0
-      }
-    },
-    {
-      "files": "**/test/**",
-      "rules": {
-        "@typescript-eslint/unbound-method": 0
-      }
-    }
-  ]
+  "extends": "@1stg"
 }
