--- a/packages/vue-qrious/package.json
+++ b/packages/vue-qrious/package.json
@@ -8,18 +8,16 @@
   "license": "MIT",
   "main": "lib/cjs",
   "module": "lib",
+  "es2015": "lib/es2015",
+  "fesm5": "lib/esm",
   "jsdelivr": "lib/umd",
   "unpkg": "lib/umd",
-  "es2015": "lib/es2015",
-  "esm5": "lib",
-  "fesm5": "lib/esm",
   "types": "lib",
   "files": [
+    "!lib/*.tsbuildinfo",
     "lib",
-    "src",
     "qrious.d.ts",
-    "typings.d.ts",
-    "!lib/*.tsbuildinfo"
+    "typings.d.ts"
   ],
   "keywords": [
     "vue-qrcode",
@@ -32,5 +30,6 @@
     "qrious": "^4.0.0",
     "vue": "^2.0.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "esm5": "lib"
 }
