--- a/package.json
+++ b/package.json
@@ -23,45 +23,47 @@
     "postinstall": "yarn-deduplicate || exit 0",
     "start": "serve dist",
     "test": "cross-env NODE_ENV=development jest",
-    "type-coverage": "type-coverage --cache --detail --ignore-catch --ignore-files '**/*.d.ts'"
+    "type-coverage": "type-coverage --cache --detail --ignore-catch --ignore-files '**/*.d.ts' --update"
   },
   "devDependencies": {
-    "@1stg/app-config": "^0.1.23",
-    "@1stg/lib-config": "^0.1.21",
-    "@d-ts/vue": "^0.4.2",
-    "@types/jest": "^25.1.1",
-    "@types/lodash": "^4.14.149",
-    "@types/node": "^13.5.2",
-    "@types/qrcode": "^1.3.4",
-    "@types/webpack": "^4.41.3",
-    "@vue/test-utils": "^1.0.0-beta.31",
-    "lerna": "^3.20.2",
-    "lodash": "^4.17.15",
+    "@1stg/app-config": "^0.5.5",
+    "@1stg/lib-config": "^0.5.5",
+    "@d-ts/vue": "^0.4.3",
+    "@types/jest": "^26.0.15",
+    "@types/lodash": "^4.14.165",
+    "@types/node": "^14.14.7",
+    "@types/qrcode": "^1.3.5",
+    "@types/webpack": "^4.41.25",
+    "@vue/test-utils": "^1.1.1",
+    "lerna": "^3.22.1",
+    "lodash": "^4.17.20",
     "lodash-es": "^4.17.15",
     "npm-run-all": "^4.1.5",
     "qrcode": "^1.4.4",
     "qrious": "^4.0.2",
-    "react": "^16.12.0",
-    "rimraf": "^3.0.1",
-    "rxjs": "^6.5.4",
-    "sass": "^1.25.0",
-    "sass-loader": "^8.0.2",
-    "serve": "^11.3.0",
-    "ts-jest": "^25.0.0",
-    "ts-node": "^8.6.2",
-    "type-coverage": "^2.4.0",
-    "typescript": "^3.7.5",
-    "vue": "^2.6.11",
-    "vue-template-compiler": "^2.6.11",
-    "vuepress": "^1.2.0",
-    "vuepress-plugin-typescript": "^0.1.1",
-    "vuepress-types": "^0.8.0",
-    "yarn-deduplicate": "^1.1.1"
+    "react": "^17.0.1",
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.6.3",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
+    "serve": "^11.3.2",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.0.0",
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
+    "type-coverage": "^2.14.2",
+    "typescript": "^4.0.5",
+    "vue": "^2.6.12",
+    "vue-template-compiler": "^2.6.12",
+    "vuepress": "^1.7.1",
+    "vuepress-plugin-typescript": "^0.3.1",
+    "vuepress-types": "^0.9.4",
+    "yarn-deduplicate": "^3.1.0"
   },
   "resolutions": {
-    "@babel/core": "^7.8.3",
+    "@babel/core": "^7.12.3",
     "imagemin-gifsicle": "^6.0.1",
-    "webpack-chain": "^6.3.1"
+    "prettier": "^2.1.2",
+    "webpack-chain": "^6.5.1"
   },
   "babel": {
     "presets": [
@@ -79,6 +81,6 @@
     "preset": "ts-jest"
   },
   "typeCoverage": {
-    "atLeast": 98.6
+    "atLeast": 99.18
   }
 }
