feat: compatible with Vue 3 - close #103

--- a/lerna.json
+++ b/lerna.json
@@ -23,7 +23,7 @@
     "publish": {
       "ignoreChanges": [
         "**/.*/**",
-        "**/test/**",
+        "**/dist/**",
         "**/test/**",
         "**/tsconfig.json",
         "**/*.md",
