chore: reassign h in render correctly

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@1stg/tsconfig/lib",
+  "extends": "@1stg/tsconfig/lib.json",
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
