--- a/packages/vue-qrious/package.json
+++ b/packages/vue-qrious/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-qrious",
-  "version": "1.5.6",
+  "version": "1.6.0",
   "description": "🤳 A Vue component for QR code generation with qrious",
   "repository": "git@github.com:rx-ts/vue.git",
   "homepage": "https://github.com/rx-ts/vue/blob/master/packages/vue-qrious",
@@ -14,10 +14,10 @@
   "unpkg": "lib/umd",
   "types": "lib",
   "files": [
-    "!lib/*.tsbuildinfo",
     "lib",
     "qrious.d.ts",
-    "typings.d.ts"
+    "typings.d.ts",
+    "!lib/*.tsbuildinfo"
   ],
   "keywords": [
     "vue-qrcode",
