--- a/package.json
+++ b/package.json
@@ -21,28 +21,27 @@
     "lint:style": "stylelint --cache '.vuepress/**/*.{scss,vue}'",
     "lint:tsc": "tsc",
     "postinstall": "simple-git-hooks && yarn-deduplicate --strategy fewer || exit 0",
+    "release": "changeset publish",
     "start": "serve dist",
     "test": "cross-env NODE_ENV=development jest",
     "typecov": "type-coverage"
   },
   "devDependencies": {
-    "@1stg/app-config": "^1.5.1",
-    "@1stg/lib-config": "^1.2.10",
+    "@1stg/app-config": "^1.5.3",
+    "@1stg/lib-config": "^1.2.11",
+    "@changesets/cli": "^2.16.0",
     "@d-ts/vue": "^1.0.0",
     "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.168",
     "@types/node": "^15.0.1",
     "@types/qrcode": "^1.4.0",
-    "@types/webpack": "^4.41.27",
     "@vue/test-utils": "^1.1.4",
-    "lerna": "^4.0.0",
     "lodash": "^4.17.20",
     "lodash-es": "^4.17.21",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.13",
     "qrcode": "^1.4.4",
     "qrious": "^4.0.2",
-    "react": "^17.0.2",
     "rimraf": "^3.0.2",
     "rxjs": "^7.0.0",
     "sass": "^1.32.12",
@@ -62,19 +61,7 @@
   },
   "resolutions": {
     "@babel/core": "^7.12.3",
-    "prettier": "^2.2.1",
-    "webpack": "^4.46.0"
-  },
-  "babel": {
-    "presets": [
-      [
-        "@1stg",
-        {
-          "typescript": true,
-          "vue": true
-        }
-      ]
-    ]
+    "prettier": "^2.2.1"
   },
   "jest": {
     "collectCoverage": true,
