--- a/package.json
+++ b/package.json
@@ -11,72 +11,60 @@
   ],
   "scripts": {
     "build": "run-s build:r build:ts build:docs",
-    "build:docs": "vuepress build",
-    "build:r": "r -e named -p",
+    "build:docs": "vitepress build docs",
+    "build:r": "r -e named -f cjs",
     "build:ts": "tsc -b",
     "clean": "rimraf dist packages/*/{lib,*.tsbuildinfo}",
-    "dev": "vuepress dev",
+    "dev": "vitepress dev docs",
     "lint": "run-p lint:*",
-    "lint:es": "cross-env EFF_NO_LINK_RULESPARSER_NO_WATCH=true eslint . --cache -f friendly",
-    "lint:style": "stylelint --cache '.vuepress/**/*.{scss,vue}'",
-    "lint:tsc": "tsc",
-    "postinstall": "simple-git-hooks && yarn-deduplicate --strategy fewer || exit 0",
+    "lint:es": "eslint . --cache -f friendly",
+    "lint:tsc": "vue-tsc --incremental false --noEmit",
+    "prepare": "simple-git-hooks && yarn-deduplicate --strategy fewer || exit 0",
     "release": "changeset publish",
-    "start": "serve dist",
-    "test": "cross-env NODE_ENV=development jest",
+    "start": "vitepress serve docs --port 8000",
+    "test": "jest",
     "typecov": "type-coverage"
   },
   "devDependencies": {
-    "@1stg/app-config": "^1.5.3",
-    "@1stg/lib-config": "^1.2.11",
+    "@1stg/app-config": "^2.3.0",
+    "@1stg/lib-config": "^4.0.0",
+    "@changesets/changelog-github": "^0.4.0",
     "@changesets/cli": "^2.16.0",
     "@d-ts/vue": "^1.0.0",
-    "@types/jest": "^26.0.23",
-    "@types/lodash": "^4.14.168",
-    "@types/node": "^15.0.1",
-    "@types/qrcode": "^1.4.0",
-    "@vue/test-utils": "^1.1.4",
-    "lodash": "^4.17.20",
-    "lodash-es": "^4.17.21",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.13",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.4",
+    "@types/qrcode": "^1.4.1",
+    "@vue/test-utils": "^2.0.0-rc.12",
+    "postcss": "^8.3.6",
     "qrcode": "^1.4.4",
     "qrious": "^4.0.2",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.0.0",
-    "sass": "^1.32.12",
-    "sass-loader": "^10.1.1",
-    "serve": "^11.3.2",
-    "ts-jest": "^26.5.5",
-    "ts-node": "^9.1.1",
-    "tsconfig-paths-webpack-plugin": "^3.5.1",
-    "type-coverage": "^2.17.5",
-    "typescript": "^4.2.4",
-    "vue": "^2.6.12",
-    "vue-template-compiler": "^2.6.12",
-    "vuepress": "^1.8.2",
-    "vuepress-plugin-typescript": "^0.3.1",
-    "vuepress-types": "^0.9.4",
-    "yarn-deduplicate": "^3.1.0"
+    "rxjs": "^7.3.0",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
+    "type-coverage": "^2.18.1",
+    "typescript": "^4.4.2",
+    "vitepress": "^0.16.1",
+    "vue": "^3.2.6",
+    "vue-tsc": "^0.3.0"
   },
   "resolutions": {
-    "@babel/core": "^7.12.3",
-    "prettier": "^2.2.1"
+    "prettier": "^2.3.2"
   },
   "jest": {
     "collectCoverage": true,
     "preset": "ts-jest"
   },
   "typeCoverage": {
-    "atLeast": 99.37,
+    "atLeast": 100,
     "cache": true,
     "detail": true,
-    "ignoreCatch": true,
     "ignoreAsAssertion": true,
     "ignoreFiles": [
-      "*.d.ts"
+      "**/lib/**/*.d.ts"
     ],
     "ignoreNonNullAssertion": true,
+    "showRelativePath": true,
     "strict": true,
     "update": true
   }
