ci: try to fix vercel error

--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "run-s build:r build:ts build:docs",
-    "build:docs": "vitepress build docs",
+    "build": "run-p build:*",
     "build:r": "r -e named -f cjs",
     "build:ts": "tsc -b",
     "clean": "rimraf dist packages/*/{lib,*.tsbuildinfo}",
-    "dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:dev": "vitepress dev docs",
+    "docs:serve": "vitepress serve docs --port 8000",
     "lint": "run-p lint:*",
     "lint:es": "eslint . --cache -f friendly",
     "lint:tsc": "vue-tsc --incremental false --noEmit",
     "prepare": "simple-git-hooks && yarn-deduplicate --strategy fewer || exit 0",
-    "prerelease": "run-p build:r build:ts",
+    "prerelease": "yarn build",
     "release": "changeset publish",
-    "start": "vitepress serve docs --port 8000",
     "test": "jest",
     "typecov": "type-coverage"
   },
