docs: use vuepress back

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
         "*.vue"
       ],
       "rules": {
+        "vue/no-multiple-template-root": 0,
         "vue/require-default-prop": 0
       }
     },
