--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "build:r": "r -e named -f cjs",
     "build:ts": "tsc -b",
     "clean": "rimraf dist packages/*/{lib,*.tsbuildinfo}",
-    "docs:build": "vitepress build docs",
-    "docs:dev": "vitepress dev docs",
-    "docs:serve": "vitepress serve docs --port 8000",
+    "docs:build": "vuepress build",
+    "docs:dev": "vuepress dev",
     "lint": "run-p lint:*",
     "lint:es": "eslint . --cache -f friendly",
     "lint:tsc": "vue-tsc --incremental false --noEmit",
@@ -33,21 +32,28 @@
     "@changesets/cli": "^2.16.0",
     "@d-ts/vue": "^1.0.0",
     "@types/jest": "^27.0.1",
+    "@types/lodash-es": "^4.17.4",
     "@types/node": "^16.7.4",
     "@types/qrcode": "^1.4.1",
     "@vue/test-utils": "^2.0.0-rc.12",
+    "@vuepress/plugin-register-components": "^2.0.0-beta.24",
+    "lodash-es": "^4.17.21",
     "postcss": "^8.3.6",
     "qrcode": "^1.4.4",
     "qrious": "^4.0.2",
     "rimraf": "^3.0.2",
     "rxjs": "^7.3.0",
+    "sass": "^1.38.2",
+    "sass-loader": "^12.1.0",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "type-coverage": "^2.18.1",
     "typescript": "^4.4.2",
-    "vitepress": "^0.16.1",
     "vue": "^3.2.6",
-    "vue-tsc": "^0.3.0"
+    "vue-tsc": "^0.3.0",
+    "vuepress": "^2.0.0-beta.24",
+    "vuepress-types": "^0.9.4"
   },
   "resolutions": {
     "prettier": "^2.3.2"
