chore: add docs:serve script

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clean": "rimraf dist packages/*/{lib,*.tsbuildinfo}",
     "docs:build": "vuepress build",
     "docs:dev": "vuepress dev",
+    "docs:serve": "serve dist -l 8000",
     "lint": "run-p lint:*",
     "lint:es": "eslint . --cache -f friendly",
     "lint:tsc": "vue-tsc --incremental false --noEmit",
@@ -45,6 +46,7 @@
     "rxjs": "^7.3.0",
     "sass": "^1.38.2",
     "sass-loader": "^12.1.0",
+    "serve": "^12.0.0",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
