--- a/packages/vue-qrious/package.json
+++ b/packages/vue-qrious/package.json
@@ -39,5 +39,8 @@
     "tslib": "^2.2.0",
     "vue-demi": "^0.11.3"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "sideEffects": false
 }
