--- a/packages/vue-qrcode/package.json
+++ b/packages/vue-qrcode/package.json
@@ -7,11 +7,14 @@
   "homepage": "https://github.com/rx-ts/vue/blob/master/packages/vue-qrcode",
   "author": "JounQin <admin@1stg.me>",
   "license": "MIT",
+  "main": "./lib/index.cjs",
+  "module": "./lib/index.js",
   "exports": {
     "import": "./lib/index.js",
-    "require": "./lib/index.cjs"
+    "require": "./lib/index.cjs",
+    "types": "./lib/index.d.ts"
   },
-  "types": "lib",
+  "types": "./lib/index.d.ts",
   "files": [
     "lib",
     "!lib/*.tsbuildinfo"
@@ -33,7 +36,7 @@
   },
   "dependencies": {
     "tslib": "^2.2.0",
-    "vue-demi": "^0.11.3"
+    "vue-demi": "^0.12.5"
   },
   "publishConfig": {
     "access": "public"
