docs: migrate to vitepress

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,5 +9,5 @@
     },
     "typeRoots": ["./node_modules/@types", "./node_modules/@d-ts"]
   },
-  "include": [".vuepress/**/*.{ts,vue}", "**/*.ts"]
+  "include": [".vitepress/**/*.{ts,vue}", "**/*.ts"]
 }
