--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "build:r": "r -e named -f cjs",
     "build:ts": "tsc -b",
     "clean": "rimraf dist packages/*/{lib,*.tsbuildinfo}",
-    "docs:build": "vuepress build",
-    "docs:dev": "vuepress dev",
-    "docs:serve": "serve dist -l 8000",
+    "docs:build": "vitepress build .",
+    "docs:dev": "vitepress dev .",
+    "docs:serve": "vitepress serve . --port 8000",
     "lint": "run-p lint:*",
     "lint:es": "eslint . --cache -f friendly",
     "lint:tsc": "vue-tsc --incremental false --noEmit",
@@ -36,26 +36,23 @@
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^17.0.23",
     "@types/qrcode": "^1.4.2",
-    "@vue/test-utils": "^2.0.0-rc.17",
-    "@vuepress/plugin-register-components": "^1.9.7",
+    "@vue/test-utils": "^2.0.0-rc.18",
     "lodash-es": "^4.17.21",
-    "postcss": "^8.3.6",
+    "postcss": "^8.4.12",
     "qrcode": "^1.5.0",
     "qrious": "^4.0.2",
     "rimraf": "^3.0.2",
     "rxjs": "^7.3.0",
     "sass": "^1.49.11",
     "sass-loader": "^12.6.0",
-    "serve": "^13.0.2",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.2.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "type-coverage": "^2.21.1",
     "typescript": "^4.4.2",
+    "vitepress": "^0.22.3",
     "vue": "^3.2.31",
-    "vue-tsc": "^0.33.9",
-    "vuepress": "^2.0.0-beta.37",
-    "vuepress-types": "^0.9.4"
+    "vue-tsc": "^0.33.9"
   },
   "resolutions": {
     "prettier": "^2.6.2"
